# twitter-clone

./: .env  Cargo.toml  PREREQUISITES.md  README.md  justfile  requests.http  ui_config.toml
app/: Cargo.toml
app/src/: app.rs  lib.rs  shell.rs
app/src/common/: app_state.rs
app/src/components/hooks/: mod.rs  use_random_id.rs
app/src/components/layout/: app_bottom_nav.rs  back_button.rs  header.rs  left_sidebar.rs  mod.rs  right_sidebar.rs
app/src/components/ui/: avatar.rs  dropdown_menu.rs  mod.rs  skeleton.rs  textarea.rs
app/src/domain/: mod.rs
app/src/domain/follow/: follow_services.rs  mod.rs
app/src/domain/tweet/: mod.rs  tweet_services.rs
app/src/domain/tweet/components/: mod.rs  tweet_card.rs  tweet_form.rs  tweet_list.rs
app/src/domain/user/: mod.rs  user_services.rs
app/src/domain/user/routing/: mod.rs  page_profile.rs  routes.rs
app/src/routing/home/: home_layout.rs  mod.rs  routes.rs
app/src/utils/: param.rs
backend/: Cargo.toml
backend/src/domain/: follow_db.rs  mod.rs  tweet_db.rs  user_db.rs
migrations/: 20250316132000_create_users_table.sql  20250316133000_create_tweets_table.sql  20250316136000_create_follows_table.sql
server/src/: fallback.rs  main.rs
server/src/app_router/: build_app_router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
