[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
ssr = ["dep:sqlx", "dep:tokio"]

[dependencies]
serde  = { workspace = true }
uuid   = { workspace = true }
time   = { workspace = true }

[dependencies.sqlx]
workspace = true
optional  = true

[dependencies.tokio]
workspace = true
optional  = true
